<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/id_tv_wakeup_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/wakeup_word"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sdk_main_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/id_sv_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/topLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/id_previous_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous_audio" />

        <Button
            android:id="@+id/id_audio_default_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audio_default" />

        <Button
            android:id="@+id/id_next_audio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_audio" />
    </LinearLayout>

    <TextView
        android:id="@+id/id_tv_RenderVoiceInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sdk_main_text_size" />

    <LinearLayout
        android:id="@+id/voice_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/voiceBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sdk_margin_margin_1"
            android:layout_weight="1"
            android:text="@string/stop_record"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sdk_main_text_size" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sdk_margin_margin_1"
            android:layout_weight="1"
            android:text="@string/cancel_recognition"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sdk_main_text_size" />

        <Button
            android:id="@+id/openLogBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sdk_margin_margin_1"
            android:layout_weight="1"
            android:text="@string/open_log"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sdk_main_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sdk_main_margin_2"
        android:layout_marginLeft="@dimen/sdk_main_margin_2"
        android:layout_marginRight="@dimen/sdk_main_margin_2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/sdk_main_et_height"
            android:layout_weight="1"
            android:hint="@string/send_edit_hint"
            android:inputType="text"
            android:padding="@dimen/sdk_main_et_padding" />

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sdk_main_et_height"
            android:layout_marginStart="@dimen/sdk_main_button_margin_start"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sdk_main_text_size" />

        <Button
            android:id="@+id/sendBtn2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sdk_main_et_height"
            android:layout_marginStart="@dimen/sdk_main_button_margin_start"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sdk_main_text_size"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/id_btn_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adjust_volume" />
</LinearLayout>
