<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_main"
    android:layout_width="240px"
    android:layout_height="240px"
    android:layout_gravity="center"
    android:background="@color/gray_translation"
    android:clickable="true"
    android:visibility="gone"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12px"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical">

        <com.readboy.watch.speech.view.AlignTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="12px"
            android:layout_marginStart="12px"
            android:layout_marginTop="12px"
            android:text="@string/traffic_dialog_content"
            android:textColor="@android:color/black"
            android:textSize="20px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="8px"
            android:paddingStart="8px"
            android:paddingTop="4px">

            <Button
                style="@style/DialogButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onDialogWifiClick"
                android:text="@string/traffic_dialog_wifi" />

            <Button
                style="@style/DialogButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onDialogExitClick"
                android:text="@string/traffic_dialog_exit" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>