<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_main"
    android:layout_width="@dimen/display_width"
    android:layout_height="@dimen/display_width"
    android:layout_gravity="center"
    android:background="@color/gray_translation"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dialog_margin_1"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dialog_cancel"
            android:layout_width="@dimen/dialog_cancel_width"
            android:layout_height="@dimen/dialog_cancel_width"
            android:layout_gravity="right"
            android:onClick="onDialogCancelClick"
            android:paddingBottom="@dimen/dialog_cancel_padding_bottom"
            android:paddingLeft="@dimen/dialog_cancel_padding_left"
            android:paddingRight="@dimen/dialog_cancel_padding_right"
            android:paddingTop="@dimen/dialog_cancel_padding_top"
            android:src="@drawable/ic_cancel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/dialog_cancel_tv_margin_horizontal"
            android:layout_marginStart="@dimen/dialog_cancel_tv_margin_horizontal"
            android:text="@string/using_mobile_data_traffic"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dialog_cancel_tv_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/dialog_button_padding_horizontal"
            android:paddingStart="@dimen/dialog_button_padding_horizontal"
            android:paddingTop="@dimen/dialog_button_padding_top">

            <Button
                style="@style/DialogButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onDialogAlwaysClick"
                android:text="@string/always_allow" />

            <Button
                style="@style/DialogButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onDialogOnceClick"
                android:text="@string/once_allow" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>